ajustando os arquivos em pasta

--- a/index.html
+++ b/index.html
@@ -310,7 +310,22 @@
 
 
 
-  <script src="main.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="scripts/exercicio1.js"></script>
+  <script src="scripts/exercicio2.js"></script>
+  <script src="scripts/exercicio3.js"></script>
+  <script src="scripts/exercicio4.js"></script>
+  <script src="scripts/exercicio5.js"></script>
+  <script src="scripts/exercicio6.js"></script>
+  <script src="scripts/exercicio7.js"></script>
+  <script src="scripts/exercicio8.js"></script>
+  <script src="scripts/exercicio9.js"></script>
+  <script src="scripts/exercicio10.js"></script>
+  <script src="scripts/exercicio11.js"></script>
+  <script src="scripts/exercicio12.js"></script>
+  <script src="scripts/exercicio13.js"></script>
+  <script src="scripts/exercicio14.js"></script>
+  <script src="scripts/exercicio15.js"></script>
 </body>
 
 </html>
